# Legged_Control

./: .gitmodules  A_lire_avant_test_reel.md  README.md
legged_controllers/config/: controllers.yaml
legged_controllers/config/a1/: reference.info  task.info
legged_controllers/config/ylo2/: reference.info  task.info
legged_controllers/launch/: load_controller.launch
legged_controllers/src/: LeggedController.cpp  TargetTrajectoriesPublisher.cpp
legged_gazebo/config/: default.yaml
legged_hw/include/legged_hw/: LeggedHWLoop.h
legged_hw/src/: LeggedHWLoop.cpp
legged_unitree/legged_unitree_description/urdf/: a1.urdf  robot.xacro
legged_unitree/legged_unitree_description/urdf/a1/: const.xacro
legged_unitree/legged_unitree_description/urdf/aliengo/: const.xacro
legged_unitree/legged_unitree_description/urdf/common/: leg.xacro
legged_unitree/legged_unitree_hw/: CMakeLists.txt
legged_unitree/legged_unitree_hw/config/: a1.yaml
legged_unitree/legged_unitree_hw/include/legged_unitree_hw/: UnitreeHW.h
legged_unitree/legged_unitree_hw/launch/: legged_unitree_hw.launch
legged_unitree/legged_unitree_hw/moteus_driver/include/moteus_driver/: YloTwoPcanToMoteus.hpp
legged_unitree/legged_unitree_hw/moteus_driver/src/: YloTwoPcanToMoteus.cpp
legged_unitree/legged_unitree_hw/src/: UnitreeHW.cpp  legged_unitree_hw.cpp
legged_unitree_hw/: CMakeLists.txt
legged_unitree_hw/include/legged_unitree_hw/: UnitreeHW.h
legged_unitree_hw/src/: UnitreeHW.cpp
legged_ylo2/: ylo2_HW_readme.md
legged_ylo2/legged_ylo2_description/: package.xml
legged_ylo2/legged_ylo2_description/launch/: check_joint.rviz  empty_world_ylo2.launch  hardware.rviz  ylo2_rviz_full.launch
legged_ylo2/legged_ylo2_description/meshes/body/: ylo2_body_collision.dae
legged_ylo2/legged_ylo2_description/meshes/leg/: FL_lower_leg_collision.stl  FL_upper_leg_collision.stl  fl_lower_leg_collision.dae  fl_upper_leg_collision.dae  ylo2_lower_leg_collision.dae  ylo2_upper_leg_collision.dae
legged_ylo2/legged_ylo2_description/meshes/leg/textured/: lower_leg_full.dae
legged_ylo2/legged_ylo2_description/urdf/: ylo2.urdf  ylo2.xacro
legged_ylo2/legged_ylo2_description/urdf/a1/: const.xacro
legged_ylo2/legged_ylo2_description/urdf/common/: leg.xacro
legged_ylo2/legged_ylo2_description/urdf/ylo2/: const.xacro
legged_ylo2/legged_ylo2_hw/: CMakeLists.txt  package.xml
legged_ylo2/legged_ylo2_hw/config/: a1.yaml  ylo2.yaml
legged_ylo2/legged_ylo2_hw/include/legged_ylo2_hw/: Ylo2HW.h
legged_ylo2/legged_ylo2_hw/launch/: legged_ylo2_hw.launch
legged_ylo2/legged_ylo2_hw/moteus_driver/include/moteus_driver/: YloTwoPcanToMoteus.hpp
legged_ylo2/legged_ylo2_hw/moteus_driver/src/: YloTwoPcanToMoteus.cpp
legged_ylo2/legged_ylo2_hw/src/: Ylo2HW.cpp  legged_ylo2_hw.cpp
legged_ylo2_description/: CMakeLists.txt
legged_ylo2_description/launch/: check_joint.rviz  empty_world_ylo2.launch  hardware.rviz  ylo2_rviz.launch
legged_ylo2_description/urdf/: ylo2.xacro
legged_ylo2_description/urdf/a1/: const.xacro
legged_ylo2_description/urdf/common/: leg.xacro
quad_imu/: CMakeLists.txt
quad_imu/rviz_cfg/: imu_test.rviz
quad_imu/src/: myahrs_driver.cpp
ylo2_imu/: CMakeLists.txt  package.xml
ylo2_imu/launch/: ylo2_imu.launch
ylo2_imu/rviz_cfg/: imu_test.rviz
ylo2_imu/src/: myahrs_driver.cpp
ylo2_legged_hw/: CMakeLists.txt  package.xml
ylo2_legged_hw/config/: ylo2.yaml
ylo2_legged_hw/include/legged_unitree_hw/: ylo2hw.h
ylo2_legged_hw/include/ylo2_legged_hw/: ylo2hw.h
ylo2_legged_hw/launch/: ylo2_legged_hw.launch
ylo2_legged_hw/moteus_driver/: CMakeLists.txt
ylo2_legged_hw/moteus_driver/include/moteus_driver/: YloTwoPcanToMoteus.hpp
ylo2_legged_hw/moteus_driver/src/: YloTwoPcanToMoteus.cpp
ylo2_legged_hw/src/: ylo2_legged_hw.cpp  ylo2hw.cpp
