<?xml version="1.0"?>
<package format="2">
    <name>ylo2_legged_hw</name>
    <version>0.0.1</version>
    <description>ROS control warped interface for Ylo2 robot</description>
    <maintainer email="vincentfoucault12@gmail.com">Vincent Foucault</maintainer>

    <license>BSD</license>
    <author email="vincentfoucault12@gmail.com">Vincent Foucault</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>legged_hw</depend>
</package>
